--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-ts": "tsc TS/calculator.ts TS/application.ts "
   },
   "keywords": [],
   "author": "",
@@ -12,5 +13,8 @@
   "dependencies": {
     "bootstrap-icons": "^1.10.2",
     "http-server": "^14.1.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.3"
   }
 }
