--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/out-tsc",
+    "outDir": "./js",
     "target": "ES2020",
     "lib": ["DOM", "ES2020"],
     "watch": true
